# fastperm_benches

./: Cargo.toml
benches/: index_permutation.rs  results.i7-8700K-3.70GHz.md  select64.rs
src/: lib.rs  select64.rs
