[package]
name = "fastperm"
version = "0.1.0"
authors = ["Philip Hayes <philiphayes9@gmail.com>"]
edition = "2021"

[[bench]]
name = "select64"
harness = false

[[bench]]
name = "index_permutation"
harness = false

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
rand_xoshiro = "0.6.0"

[dev-dependencies]
criterion = "0.3.6"
proptest = "1"
